Fix z-index footer

--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -7,7 +7,7 @@ footer {
   color: white;
   position: absolute;
   bottom: -35vh;
-  z-index: -1;
+  z-index: 10;
 
   padding: 5em;
 
